[global]
verbose = 1

[build]
build_base    = artifacts/Build
build_purelib = artifacts/Build/Standard
build_scripts = artifacts/Build/Scripting
build_lib     = artifacts/Build/Library

[bdist_rpm]
vendor = Cloud-Technology

[sdist]
dist_dir    = artifacts/Distribution/Source

[bdist]
bdist_base  = artifacts/Distribution/Binary
dist_dir    = artifacts/Distribution
formats     = zip

[bdist_egg]
dist_dir                = artifacts/Distribution
bdist_dir               = artifacts/Distribution/Egg
keep_temp               = False
skip_build              = False
exclude_source_files    = False

[bdist_wheel]
universal       = 1
bdist_dir       = artifacts/Distribution/Binary
dist_dir        = artifacts/Distribution

[aliases]
release = sdist bdist bdist_egg bdist_wheel

[metadata]
name = python-api-service
url = https://gitlab.cloud-technology.io
description = Test API Service
long_description = file: README.md
long_description_content_type = text/markdown
author = Jacob B. Sanders
author_email = jacob.sanders@cloudhybrid.io
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Communications :: Email
    Topic :: Office/Business
    Topic :: Software Development :: Bug Tracking

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    python-api-service = src.__main__:Main
